<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.games.QuizzView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60sp">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#6E6E6E"
            android:text="@string/question_ici"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="40sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choices_layout"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ansA"
            android:layout_margin="5sp"
            android:backgroundTint="@color/white"
            android:text="@string/rep_a"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ansB"
            android:layout_margin="5sp"
            android:backgroundTint="@color/white"
            android:text="@string/rep_b"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ansC"
            android:layout_margin="5sp"
            android:backgroundTint="@color/white"
            android:text="@string/rep_c"
            android:textColor="@color/black"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ansD"
            android:layout_margin="5sp"
            android:backgroundTint="@color/white"
            android:text="@string/rep_d"
            android:textColor="@color/black"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>