<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_bg">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/boutonJouer"
        android:layout_width="360dp"
        android:layout_height="87dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="491dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/main_menu_button"
        android:text="@string/jouer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="189dp"
        android:layout_height="180dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="627dp"
        android:contentDescription="@string/logo_hastequest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ScrollView
        android:layout_width="340dp"
        android:layout_height="409dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="37dp"
        app:layout_constraintBottom_toTopOf="@+id/boutonJouer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/fermerRegles"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:contentDescription="@string/fermerregles"
                    app:srcCompat="@android:drawable/btn_dialog"
                    android:layout_marginEnd="100sp"/>

                <TextView
                    android:id="@+id/textRegle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/regles"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/regles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lorem_ipsum" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>