<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_bg">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/boutonJeuLibre"
        android:layout_width="138dp"
        android:layout_height="88dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="74dp"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="129dp"
        android:background="@drawable/main_menu_button"
        android:text="@string/jeu_libre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boutonSurvie"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/boutonSurvie"
        android:layout_width="138dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="239dp"
        android:layout_marginBottom="129dp"
        android:background="@drawable/main_menu_button"
        android:text="@string/survie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="291dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo_hastequest" />
</androidx.constraintlayout.widget.ConstraintLayout>