<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".controller.games.Dbh">


    <ImageButton
        android:id="@+id/boutonHome"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="321dp"
        android:layout_marginBottom="743dp"
        android:contentDescription="@string/retour_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageView
        android:id="@+id/heart2"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="61dp"
        android:contentDescription="@string/imagecoeur"
        app:layout_constraintBottom_toTopOf="@+id/imageJeu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/heart3"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="651dp"
        android:contentDescription="@string/imagecoeur"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/heart2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/heart1"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="651dp"
        android:contentDescription="@string/imagecoeur"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/heart2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/imageJeu"
        android:layout_width="265dp"
        android:layout_height="293dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="217dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="297dp"
        android:contentDescription="@string/image_du_jeu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/boutonJouer"
        android:layout_width="146dp"
        android:layout_height="79dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="204dp"
        android:background="@drawable/main_menu_button"
        android:onClick="startGame"
        android:text="@string/jouer_butt"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageJeu" />

    <TextView
        android:id="@+id/score"
        android:layout_width="206dp"
        android:layout_height="36dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="743dp"
        android:text="@string/score_actuel_xx"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boutonHome"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>